--- a/01/usingACDNWithFallback.html
+++ b/01/usingACDNWithFallback.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title>Using a CDN with a Fallback</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+        window.jQuery || document.write("<script src= 'scripts/jquery.js'><\/script>")
+    </script>
     <script>
         $(document).ready(function () {
             $("#content").html("Script loaded!");
