--- a/02/02-on-instead-of-live.html
+++ b/02/02-on-instead-of-live.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <link href="./ext/toastr/toastr.min.css" rel="stylesheet" />
@@ -13,14 +13,17 @@
 		<li><a href="detail.html?id=4">Detail 4</a></li>
 		<li><a href="detail.html?id=5">Detail 5</a></li>
 	</ul>
+
     <button>Add Item</button>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <script src="./ext/toastr/toastr.min.js"></script>
 	<script>
-	    $("#members").find("li a").live("click", function (e) {
+        $("#members").on("click","#members li a",  function (e) {
 			e.preventDefault();
             toastr.success($(this).text(), "Click");
-		});
+        });
+
 		$("button").on("click", function () {
             $("<li><a href='#'>Detail 6</a></li>").appendTo("#members");
 		});
