--- a/02/05-registering-events-before-dom-ready.html
+++ b/02/05-registering-events-before-dom-ready.html
@@ -1,18 +1,36 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8 />
-<title>JS Bin</title>
-<link href="./ext/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<link href="./ext/jquery-ui/css/ui-lightness/jquery-ui.min.css" rel="stylesheet" />
-<link href="./ext/toastr/toastr.min.css" rel="stylesheet" />
-<style>
-input.glowing:focus {
-    outline: none;
-    border-color: Chocolate;
-    box-shadow: 0 0 10px Chocolate;
-}
-</style>
+    <meta charset=utf-8 />
+    <title>JS Bin</title>
+    <link href="./ext/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./ext/jquery-ui/css/ui-lightness/jquery-ui.min.css" rel="stylesheet" />
+    <link href="./ext/toastr/toastr.min.css" rel="stylesheet" />
+    <style>
+        input.glowing:focus {
+            outline: none;
+            border-color: Chocolate;
+            box-shadow: 0 0 10px Chocolate;
+        }
+    </style>
+        <script src="./ext/jquery/jquery.min.js"></script>
+        <script src="./ext/jquery-ui/js/jquery-ui.min.js"></script>
+        <script src="./ext/toastr/toastr.min.js"></script>
+        <script>
+            $(document).ready(function () { 
+            $("input.date").datepicker();
+        });
+
+            $(document).on("focus.glow blur.glow", "input", function (e) {
+                $(this).toggleClass("glowing", e.type === "focusin");
+            });
+
+            $(document).on("click", "button[type='submit']", function (e) {
+                e.preventDefault();
+                toastr.success("Save Changes", "Saving and removing glowing...");
+                $(document).off(".glow","input");
+            });
+        </script>
 </head>
 <body>
     <form class="form-horizontal well">
@@ -47,23 +65,5 @@ input.glowing:focus {
             </div>
         </fieldset>
     </form>
-    <script src="./ext/jquery/jquery.min.js"></script>
-    <script src="./ext/jquery-ui/js/jquery-ui.min.js"></script>
-    <script src="./ext/toastr/toastr.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("input.date").datepicker();
-        });
-
-        $(document).on("focus.glow blur.glow", "input", function (e) {
-            $(this).toggleClass("glowing", e.type === "focusin");
-        });
-
-        $(document).on("click", "button[type='submit']", function (e) {
-            e.preventDefault();
-            toastr.success("Save Changes", "Saving and removing glowing...");
-            $(document).off(".glow", "input");
-        });
-    </script>
 </body>
 </html>
