--- a/02/08-determining-user-input.html
+++ b/02/08-determining-user-input.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <link href="./ext/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -28,9 +28,11 @@
             </div>
         </fieldset>
     </form>
+
     <div id="output"></div>
     <script src="./ext/jquery/jquery.min.js"></script>
     <script src="./ext/toastr/toastr.min.js"></script>
+
     <script>
         $("#name").on("keypress", function (e) {
             toastr.success(e.which, "KeyPress");
