--- a/02/09-determine-if-event-triggered-by-user.html
+++ b/02/09-determine-if-event-triggered-by-user.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <link href="./ext/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <title>Determining User Input</title>
 </head>
+
 <body>
     <form class="form-horizontal well">
         <fieldset>
@@ -16,6 +17,7 @@
             </div>
         </fieldset>
     </form>
+
     <div id="output"></div>
     <script src="./ext/jquery/jquery.min.js"></script>
     <script src="./ext/toastr/toastr.min.js"></script>
